<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- android_large___1 strings -->

    <string name="app_name">Page 1</string>
    <string name="start_traveling_string">Start Traveling</string>
    <string name="camping_string">Camping </string>
    <string name="cuy_string">Cuy</string>>
    <string name="desc_txt">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, to</string>
    <string name="desc">Image</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="create_account">Create Account</string>
    <string name="information">Enter Your Information</string>
    <string name="name">Full Name</string>
    <string name="confirm">Confirm Password</string>
    <string name="create">Create</string>
    <string name="email">Enter Your Email</string>
    <string name="password">Enter Your Password</string>
    <string name="error_email_is_not_valid">Email is not valid</string>
    <string name="error_password_min_8_char">Password must be filled min 8 characters</string>
    <string name="main_txt1">Create Your Own Camp Story</string>
    <string name="main_txt2">Search Location</string>
    <string name="main_txt3">Categories</string>
    <string name="main_txt4">view more</string>
    <string name="main_txt5">Recommanded</string>
    <string name="dtl_txt1">Surabaya</string>
    <string name="dtl_txt2">Mentawai, Sumatra barat</string>
    <string name="dtl_txt3">Rating</string>
    <string name="dtl_txt4">People</string>
    <string name="dtl_txt5">Mileage</string>
    <string name="dtl_txt6">Description</string>
    <string name="dtl_txt7">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore\n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore "</string>
    <string name="dtl_txt8">Total Price</string>
    <string name="dtl_txt9">Price</string>
    <string name="dtl_txt10">/ day</string>
    <string name="map">See Map</string>
    <string name="map_txt">Book Now</string>
    <string name="checkout_txt1">Ringkasan Order</string>
    <string name="checkout_txt2">Camping Cuy</string>
    <string name="checkout_txt3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</string>
    <string name="checkout_txt4">Facilities</string>
    <string name="checkout_txt5">"Nomor Boxing: "</string>
    <string name="checkout_txt6">3661e6</string>
    <string name="checkout_txt7">Detail Transaksi</string>
    <string name="checkout_txt8">Boxing 1 Tenda</string>
    <string name="checkout_txt9">1 Hari</string>
    <string name="checkout_txt10">1 Hari + Sarpas</string>
    <string name="checkout_txt11">Biaya Layanan</string>
    <string name="checkout_price">Rp. 50.000</string>
    <string name="checkout_price2">Rp. 150.000</string>
    <string name="checkout_txt12">Selesaikan Pembayaran dalam 05.00</string>
    <string name="checkout_txt13">-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</string>
    <string name="checkout_txt14">"-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore "</string>
    <string name="checkout_txt15">"-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore "</string>
    <string name="checkout_txt16">Total Bayar</string>
    <string name="checkout_price3">Rp.234.000</string>
    <string name="btn_checkout">Check Out</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Name</string>
    <string name="address">Address</string>
    <string name="status">Status</string>
    <string name="btn_logout">Logout</string>
    <string name="great">Great!</string>
    <string name="category">Payment Succes</string>
    <string name="bank">Form Bank</string>
    <string name="pay">Pay</string>
    <string name="administration">Administration</string>
    <string name="date">Pay Date</string>
    <string name="bank_type">BRI Link</string>
    <string name="pay_price">$45.00</string>
    <string name="adm_price">$5.00</string>
    <string name="pay_date">Jan 09, 20223</string>
    <string name="total_pay">Total Pay</string>
    <string name="total">$50.00</string>
    <string name="btn_home">Menu Utama</string>
    <string name="photo_place">Photo Place</string>
    <string name="sign_up">Sign Up</string>
    <string name="LOGIN">LOGIN</string>
</resources>