<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/splash_img"
        android:layout_width="471dp"
        android:layout_height="794dp"
        android:contentDescription="@string/desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_splash_login_register" />

    <TextView
        android:id="@+id/camping"
        android:layout_width="246dp"
        android:layout_height="164dp"
        android:text="@string/camping_string"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/cuy"
        android:layout_width="112dp"
        android:layout_height="72dp"
        android:text="@string/cuy_string"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <com.my.campingcuy.ui.custom.EmailEditText
        android:id="@+id/edt_email"
        android:layout_width="283dp"
        android:layout_height="36dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="356dp"
        android:background="@drawable/rectangle_shape_3"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFFFF"
        android:textSize="14sp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:paddingStart="14sp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_email_id"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="328dp"
        android:text="Email ID"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.my.campingcuy.ui.custom.PasswordEditText
        android:id="@+id/edt_password"
        android:layout_width="283dp"
        android:layout_height="36dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rectangle_shape_3"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="14sp"
        android:paddingEnd="8dp"
        android:textColor="#FFFFFFFF"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />


    <CheckBox
        android:id="@+id/checkboxPassword"
        android:layout_width="145dp"
        android:layout_height="28dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="6dp"
        android:foregroundTint="#00C62A2A"
        android:text="Show Password"
        android:textColor="#FFFFFF"
        android:buttonTint="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="283dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="504dp"
        android:text="@string/login"
        android:onClick="goToMain"
        android:enabled="false"
        android:textColor="@color/white"
        android:background="@drawable/rectangle_shape"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_belum_punya_akun"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="548dp"
        android:text="@string/belum_punya_akun"
        android:textColor="#FFFFFFFF"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_daftar"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="548dp"
        android:text="@string/daftar"
        android:textColor="#FFFFFFFF"
        android:onClick="goRegister"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_belum_punya_akun"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_back_arrow"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/ic_arrow_back"
        android:background="@drawable/white_rectangle"
        android:padding="5dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="31dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>